--- a/index.html
+++ b/index.html
@@ -3,19 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Monster Reads</title>
 </head>
+
 <body>
-<h1>Home</h1>
-<p>Welcome to this page (Home)</p>
+<h1>Monster Reads</h1>
+<h2>Only the Best-Selling Classics</h2>
+
+<section>
+    <h3>Frankenstein</h3>
+<p>The classic gothic horror novel.</p>
+<p>By famous author Mary Shelley.</p>
 <a href="https://www.google.com/imghp" target="_blank">
-    <img src="images/image1.jpg" alt="Small image" width="150" height="150">
+  <img src="images/image6.png" alt="Frankenstein book cover" width="150" height="150">
 </a>
+</section>
+
 <!-- Links to all 5 pages. -->
 <nav>
     <a href="index.html">Home</a> |
+    <a href="product.html">View product</a> |
     <a href="checkout.html">Products</a> |
-    <a href="product.html">Product</a> |
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
 </nav>
