Small edits to the elements' order

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,29 @@
 </head>
 
 <body>
-<h1>Monster Reads</h1>
-<h2>Only the Best-Selling Classics</h2>
+    <h1>Monster Reads</h1>
 
-<section>
-    <h3>Frankenstein</h3>
-<p>The classic gothic horror novel.</p>
-<p>By famous author Mary Shelley.</p>
-<a href="https://www.google.com/imghp" target="_blank">
-  <img src="images/image6.png" alt="Frankenstein book cover" width="150" height="150">
-</a>
-</section>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="product.html">View product</a> |
+        <a href="checkout.html">Products</a> |
+        <a href="about.html">About</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
 
-<!-- Links to all 5 pages. -->
-<nav>
-    <a href="index.html">Home</a> |
-    <a href="product.html">View product</a> |
-    <a href="checkout.html">Products</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
-</nav>
+    <h2>Only the Best-Selling Classics</h2>
+
+    <section>
+        <h3>Frankenstein</h3>
+        <p>The classic gothic horror novel.</p>
+        <p>By famous author Mary Shelley.</p>
+        <img src="images/image6.png" alt="Frankenstein book cover" width="500">
+        <p>
+            <a href="product.html" target="_blank">Learn more</a>
+        </p>
+
+    </section>
+
 </body>
-</html>
 
+</html>
