--- a/product.html
+++ b/product.html
@@ -10,8 +10,6 @@
 <!-- Shop name -->
 <h1>Monster Reads</h1>
 
-<p>Welcome to this page (Product)</p>
-
 <!-- Navigation: links to all 5 pages -->
 <nav>
     <a href="index.html">Home</a> |
@@ -21,28 +19,22 @@
     <a href="contact.html">Contact</a>
 </nav>
 
-<hr>
-
 <!-- Page title -->
-<h2>Frankenstein</h2>
+<h2>Our products</h2>
 
 <!-- Product details -->
 <h3>Frankenstein</h3>
 <p><strong>Author:</strong> Mary Shelley</p>
 
-<!-- Product image (clickable like your example) -->
-<a href="https://www.google.com/imghp" target="_blank">
-    <img src="images/image6.png" alt="Frankenstein book cover" width="150" height="150">
-</a>
+<!-- Product image -->
+<img src="images/image6.png" alt="Frankenstein book cover" width="500">
 
 <!-- Price -->
 <p><strong>Price:</strong> 99 kr</p>
 
 <!-- Description -->
 <p>
-    Frankenstein is a classic novel that explores ambition, responsibility,
-    and the consequences of scientific discovery. A timeless story that
-    blends gothic horror with deep philosophical questions.
+    Frankenstein is a classic novel that explores ambition, responsibility, and the consequences of scientific discovery. A timeless story that blends gothic horror with deep philosophical questions.
 </p>
 
 <!-- Buy link -->
