Fix inconsistent navigation across pages

--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
 <!-- Links to all 5 pages. -->
 <nav>
     <a href="index.html">Home</a> |
-    <a href="checkout.html">Products</a> |
     <a href="product.html">Product</a> |
+    <a href="checkout.html">Checkout</a> |
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
 </nav>
