--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
     <nav>
         <a href="index.html">Home</a> |
-        <a href="checkout.html">Products</a> |
         <a href="product.html">Product</a> |
+        <a href="checkout.html">Checkout</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a>
     </nav>
