--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <nav>
         <a href="index.html">Home</a> |
-        <a href="product.html">View product</a> |
-        <a href="checkout.html">Products</a> |
+        <a href="product.html">Product</a> |
+        <a href="checkout.html">Checkout</a> |
         <a href="about.html">About</a> |
         <a href="contact.html">Contact</a>
     </nav>
