--- a/product.html
+++ b/product.html
@@ -13,8 +13,8 @@
 <!-- Navigation: links to all 5 pages -->
 <nav>
     <a href="index.html">Home</a> |
-    <a href="checkout.html">Products</a> |
     <a href="product.html">Product</a> |
+    <a href="checkout.html">Checkout</a> |
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
 </nav>
