Adjust navigation links order

--- a/checkout.html
+++ b/checkout.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monster Reads - Checkout</title>
 </head>
 <body>
@@ -10,10 +11,10 @@
 
   <nav>
     <a href="index.html">Home</a> |
-    <a href="products.html">Products</a> |
+    <a href="product.html">Product</a> |
+    <a href="checkout.html">Checkout</a> |
     <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a> |
-    <a href="checkout.html">Checkout</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
   <h2>Checkout</h2>
