--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Monster Reads</title>
+    <link rel="stylesheet" href="layout.css">
 </head>
 <body>
     <h1>Monster Reads</h1>
