--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="layout.css" href="components.css">
+   
 </head>
 <body>
 <h1>About</h1>
