--- a/product.html
+++ b/product.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frankenstein | Monster Reads</title>
-    <link rel="stylesheet" href="layout.css" href="components.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="components.css">
 </head>
 
 <body>
