--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="components.css">
+    <link rel="stylesheet" href="base.css">
 </head>
 <body>
 <h1>About</h1>
