--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
   <title>Monster Reads - Checkout</title>
   <link rel="stylesheet" href="layout.css">
   <link rel="stylesheet" href="components.css">
+  <link rel="stylesheet" href="base.css">
 </head>
 <body>
 
