--- a/about.html
+++ b/about.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Monster Reads</title>
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="components.css">
 </head>
+
 <body>
 
     <h1>Monster Reads</h1>
@@ -34,5 +39,5 @@
     </p>
 
 </body>
-</html>
 
+</html>
