Rebase to get the latest version of about.html

--- a/about.html
+++ b/about.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>About Us - Monster Reads</title>
     <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="base.css">
 </head>
-<body>
-<h1>About</h1>
-<p>Welcome to this page (About)</p>
-<a href="https://www.google.com/imghp" target="_blank">
-    <img src="images/image4.jpg" alt="Small image" width="150" height="150">
-</a>
-<!-- Links to all 5 pages. -->
-<nav>
-    <a href="index.html">Home</a> |
-    <a href="product.html">Product</a> |
-    <a href="checkout.html">Checkout</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
-</nav>
-</body>
-</html>
 
+<body>
+
+    <h1>Monster Reads</h1>
+
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="product.html">Product</a> |
+        <a href="checkout.html">Checkout</a> |
+        <a href="about.html">About</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <h2>About Us</h2>
+
+    <p>
+        Monster Reads is an online book shop dedicated to classic literature
+        with dark and thought-provoking themes.
+    </p>
+
+    <p>
+        We sell <strong>Frankenstein</strong> because it is a timeless story
+        about creation, responsibility, and the consequences of ambition.
+    </p>
+
+    <p>
+        The shop is run by a small fictional team of book lovers who are
+        passionate about classic monster stories.
+    </p>
+
+</body>
+
+</html>
