--- a/product.html
+++ b/product.html
@@ -27,26 +27,28 @@
     <!-- Page title -->
     <h2>Our products</h2>
 
-    <!-- Product details -->
-    <h3>Frankenstein</h3>
-    <p><strong>Author:</strong> Mary Shelley</p>
+    <div class="product-card">
+        <!-- Product details -->
+        <h3>Frankenstein</h3>
+        <p><strong>Author:</strong> Mary Shelley</p>
 
-    <!-- Product image -->
-    <img src="images/image6.png" alt="Frankenstein book cover" width="500">
+        <!-- Product image -->
+        <img src="images/image6.png" alt="Frankenstein book cover" width="500">
 
-    <!-- Price -->
-    <p><strong>Price:</strong> 99 kr</p>
+        <!-- Price -->
+        <p class="product-price">99 kr</p>
 
-    <!-- Description -->
-    <p>
-        Frankenstein is a classic novel that explores ambition, responsibility, and the consequences of scientific
-        discovery. A timeless story that blends gothic horror with deep philosophical questions.
-    </p>
+        <!-- Description -->
+        <p>
+            Frankenstein is a classic novel that explores ambition, responsibility, and the consequences of scientific
+            discovery. A timeless story that blends gothic horror with deep philosophical questions.
+        </p>
 
-    <!-- Buy link -->
-    <a href="checkout.html">
-        <button>Buy Now</button>
-    </a>
+        <!-- Buy link -->
+        <a href="checkout.html">
+            <button>Buy Now</button>
+        </a>
+    </div>
 
 </body>
 
