--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <link rel="stylesheet" href="base.css">
 </head>
 
+<section class="testimonials">
+    <h2>What Our Customers Say</h2>
+
+    <div class="testimonial">
+        <p class="testimonial-text">"Frankenstein arrived in perfect condition. A must-read for anyone who loves classic literature!"</p>
+        <p class="testimonial-author">— Emma L., Stockholm</p>
+    </div>
+
+    <div class="testimonial">
+        <p class="testimonial-text">"Fast shipping and great customer service. The book exceeded my expectations."</p>
+        <p class="testimonial-author">— Johan K., Gothenburg</p>
+    </div>
+
+    <div class="testimonial">
+        <p class="testimonial-text">"This gothic masterpiece is beautifully presented. Monster Reads is my go-to shop for classics!"</p>
+        <p class="testimonial-author">— Sofia M., Malmö</p>
+    </div>
+</section>
+
 <body>
     <h1>Monster Reads</h1>
 
