Add footer to all pages

--- a/checkout.html
+++ b/checkout.html
@@ -58,6 +58,9 @@
 
     <button type="submit">Submit Order</button>
   </form>
-
+    <footer>
+    <p>&copy; 2026 Monster Reads. All rights reserved.</p>
+    <p>Bringing classic literature to life, one monster at a time.</p>
+</footer>   
 </body>
 </html>
