Add missing footer

--- a/product.html
+++ b/product.html
@@ -49,6 +49,10 @@
             <button>Buy Now</button>
         </a>
     </div>
+    <footer>
+        <p>&copy; 2026 Monster Reads. All rights reserved.</p>
+        <p>Bringing classic literature to life, one monster at a time.</p>
+    </footer>
 
 </body>
 
