--- a/about.html
+++ b/about.html
@@ -38,6 +38,10 @@
         The shop is run by a small fictional team of book lovers who are
         passionate about classic monster stories.
     </p>
+    <footer>
+        <p>&copy; 2026 Monster Reads. All rights reserved.</p>
+        <p>Bringing classic literature to life, one monster at a time.</p>
+    </footer>
 
 </body>
 
