--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         // Ladda ett skämt automatiskt när sidan öppnas
         loadJoke();
     </script>
+    <footer>
+        <p>&copy; 2026 Monster Reads. All rights reserved.</p>
+        <p>Bringing classic literature to life, one monster at a time.</p>
+    </footer>
 
 
 
