Wrap the content into `<main>`

--- a/about.html
+++ b/about.html
@@ -11,33 +11,35 @@
 </head>
 
 <body>
+    <main>
+        <h1>Monster Reads</h1>
 
-    <h1>Monster Reads</h1>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="product.html">Product</a> |
+            <a href="checkout.html">Checkout</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
 
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="product.html">Product</a> |
-        <a href="checkout.html">Checkout</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
-    </nav>
+        <h2>About Us</h2>
 
-    <h2>About Us</h2>
+        <p>
+            Monster Reads is an online book shop dedicated to classic literature
+            with dark and thought-provoking themes.
+        </p>
 
-    <p>
-        Monster Reads is an online book shop dedicated to classic literature
-        with dark and thought-provoking themes.
-    </p>
+        <p>
+            We sell <strong>Frankenstein</strong> because it is a timeless story
+            about creation, responsibility, and the consequences of ambition.
+        </p>
 
-    <p>
-        We sell <strong>Frankenstein</strong> because it is a timeless story
-        about creation, responsibility, and the consequences of ambition.
-    </p>
+        <p>
+            The shop is run by a small fictional team of book lovers who are
+            passionate about classic monster stories.
+        </p>
+    </main>
 
-    <p>
-        The shop is run by a small fictional team of book lovers who are
-        passionate about classic monster stories.
-    </p>
     <footer>
         <p>&copy; 2026 Monster Reads. All rights reserved.</p>
         <p>Bringing classic literature to life, one monster at a time.</p>
