--- a/contact.html
+++ b/contact.html
@@ -11,42 +11,45 @@
 </head>
 
 <body>
-    <h1>Monster Reads</h1>
+    <main>
+        <h1>Monster Reads</h1>
 
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="product.html">Product</a> |
-        <a href="checkout.html">Checkout</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="product.html">Product</a> |
+            <a href="checkout.html">Checkout</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
 
-    <h2>Contact Us</h2>
+        <h2>Contact Us</h2>
 
-    <h3>Contact Information</h3>
-    <p>Email: <a href="mailto:info@monsterreads.com">info@monsterreads.com</a></p>
-    <p>Phone: <a href="tel:+46701234567">+46 70 123 45 67</a></p>
-    <p>Address: 123 Bookstore Lane, Stockholm, Sweden</p>
+        <h3>Contact Information</h3>
+        <p>Email: <a href="mailto:info@monsterreads.com">info@monsterreads.com</a></p>
+        <p>Phone: <a href="tel:+46701234567">+46 70 123 45 67</a></p>
+        <p>Address: 123 Bookstore Lane, Stockholm, Sweden</p>
 
-    <h3>Send Us a Message</h3>
-    <form>
-        <fieldset>
-            <legend>Your Message</legend>
+        <h3>Send Us a Message</h3>
+        <form>
+            <fieldset>
+                <legend>Your Message</legend>
 
-            <label for="name">Name *</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+                <label for="name">Name *</label><br>
+                <input type="text" id="name" name="name" required><br><br>
 
-            <label for="email">Email *</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+                <label for="email">Email *</label><br>
+                <input type="email" id="email" name="email" required><br><br>
 
-            <label for="message">Message *</label><br>
-            <textarea id="message" name="message" rows="5" cols="30" required></textarea>
-        </fieldset>
+                <label for="message">Message *</label><br>
+                <textarea id="message" name="message" rows="5" cols="30" required></textarea>
+            </fieldset>
 
-        <br>
+            <br>
 
-        <button type="submit">Send Message</button>
-    </form>
+            <button type="submit">Send Message</button>
+        </form>
+    </main>
+
     <footer>
         <p>&copy; 2026 Monster Reads. All rights reserved.</p>
         <p>Bringing classic literature to life, one monster at a time.</p>
