--- a/index.html
+++ b/index.html
@@ -11,91 +11,94 @@
 </head>
 
 <body>
-    <h1>Monster Reads</h1>
+    <main>
+        <h1>Monster Reads</h1>
 
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="product.html">Product</a> |
-        <a href="checkout.html">Checkout</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="product.html">Product</a> |
+            <a href="checkout.html">Checkout</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
 
-    <h2>Only the Best-Selling Classics</h2>
+        <h2>Only the Best-Selling Classics</h2>
 
-    <section>
-        <h3>Frankenstein</h3>
-        <p>The classic gothic horror novel.</p>
-        <p>By famous author Mary Shelley.</p>
-        <img src="images/image6.png" alt="Frankenstein book cover" width="500">
-        <p>
-            <a href="product.html">Learn more</a>
-        </p>
-    </section>
-
-    <section class="testimonials">
-        <h2>What Our Customers Say</h2>
-
-        <div class="testimonial">
-            <p class="testimonial-text">"Frankenstein arrived in perfect condition. A must-read for anyone who loves
-                classic literature!"</p>
-            <p class="testimonial-author">— Emma L., Stockholm</p>
-        </div>
-
-        <div class="testimonial">
-            <p class="testimonial-text">"Fast shipping and great customer service. The book exceeded my expectations."
+        <section>
+            <h3>Frankenstein</h3>
+            <p>The classic gothic horror novel.</p>
+            <p>By famous author Mary Shelley.</p>
+            <img src="images/image6.png" alt="Frankenstein book cover" width="500">
+            <p>
+                <a href="product.html">Learn more</a>
             </p>
-            <p class="testimonial-author">— Johan K., Gothenburg</p>
-        </div>
+        </section>
 
-        <div class="testimonial">
-            <p class="testimonial-text">"This gothic masterpiece is beautifully presented. Monster Reads is my go-to
-                shop for classics!"</p>
-            <p class="testimonial-author">— Sofia M., Malmö</p>
-        </div>
-    </section>
+        <section class="testimonials">
+            <h2>What Our Customers Say</h2>
 
-    <hr class="content-divider">
+            <div class="testimonial">
+                <p class="testimonial-text">"Frankenstein arrived in perfect condition. A must-read for anyone who loves
+                    classic literature!"</p>
+                <p class="testimonial-author">— Emma L., Stockholm</p>
+            </div>
 
-    <section class="joke-section">
-        <h2>Take a Break</h2>
-        <p>Enjoy a random joke while browsing our collection!</p>
+            <div class="testimonial">
+                <p class="testimonial-text">"Fast shipping and great customer service. The book exceeded my expectations."
+                </p>
+                <p class="testimonial-author">— Johan K., Gothenburg</p>
+            </div>
 
-        <button onclick="loadJoke()">Get a new joke</button>
+            <div class="testimonial">
+                <p class="testimonial-text">"This gothic masterpiece is beautifully presented. Monster Reads is my go-to
+                    shop for classics!"</p>
+                <p class="testimonial-author">— Sofia M., Malmö</p>
+            </div>
+        </section>
 
-        <p id="joke"></p>
-    </section>
+        <hr class="content-divider">
 
-    <script>
-        // Hämta paragrafen där skämtet ska visas
-        const jokeElement = document.getElementById("joke");
+        <section class="joke-section">
+            <h2>Take a Break</h2>
+            <p>Enjoy a random joke while browsing our collection!</p>
 
-        // Funktion som hämtar ett nytt skämt
-        function loadJoke() {
-            // Visa laddningstext medan vi väntar
-            jokeElement.textContent = "Laddar skämt...";
+            <button onclick="loadJoke()">Get a new joke</button>
 
-            // Anropa API:et för att få ett slumpmässigt skämt
-            fetch("https://official-joke-api.appspot.com/random_joke")
-                .then(function (response) {
-                    // Gör om svaret till JSON
-                    return response.json();
-                })
-                .then(function (joke) {
-                    // Visa skämtet på sidan
-                    jokeElement.textContent =
-                        joke.setup + " — " + joke.punchline;
-                })
-                .catch(function () {
-                    // Om något går fel, visa ett felmeddelande
-                    jokeElement.textContent =
-                        "Kunde inte ladda skämt 😢";
-                });
-        }
+            <p id="joke"></p>
+        </section>
 
-        // Ladda ett skämt automatiskt när sidan öppnas
-        loadJoke();
-    </script>
+        <script>
+            // Hämta paragrafen där skämtet ska visas
+            const jokeElement = document.getElementById("joke");
+
+            // Funktion som hämtar ett nytt skämt
+            function loadJoke() {
+                // Visa laddningstext medan vi väntar
+                jokeElement.textContent = "Laddar skämt...";
+
+                // Anropa API:et för att få ett slumpmässigt skämt
+                fetch("https://official-joke-api.appspot.com/random_joke")
+                    .then(function (response) {
+                        // Gör om svaret till JSON
+                        return response.json();
+                    })
+                    .then(function (joke) {
+                        // Visa skämtet på sidan
+                        jokeElement.textContent =
+                            joke.setup + " — " + joke.punchline;
+                    })
+                    .catch(function () {
+                        // Om något går fel, visa ett felmeddelande
+                        jokeElement.textContent =
+                            "Kunde inte ladda skämt 😢";
+                    });
+            }
+
+            // Ladda ett skämt automatiskt när sidan öppnas
+            loadJoke();
+        </script>
+    </main>
+
     <footer>
         <p>&copy; 2026 Monster Reads. All rights reserved.</p>
         <p>Bringing classic literature to life, one monster at a time.</p>
