--- a/product.html
+++ b/product.html
@@ -11,44 +11,46 @@
 </head>
 
 <body>
+    <main>
+        <!-- Shop name -->
+        <h1>Monster Reads</h1>
 
-    <!-- Shop name -->
-    <h1>Monster Reads</h1>
+        <!-- Navigation: links to all 5 pages -->
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="product.html">Product</a> |
+            <a href="checkout.html">Checkout</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
 
-    <!-- Navigation: links to all 5 pages -->
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="product.html">Product</a> |
-        <a href="checkout.html">Checkout</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
-    </nav>
+        <!-- Page title -->
+        <h2>Our products</h2>
 
-    <!-- Page title -->
-    <h2>Our products</h2>
+        <div class="product-card">
+            <!-- Product details -->
+            <h3>Frankenstein</h3>
+            <p><strong>Author:</strong> Mary Shelley</p>
 
-    <div class="product-card">
-        <!-- Product details -->
-        <h3>Frankenstein</h3>
-        <p><strong>Author:</strong> Mary Shelley</p>
+            <!-- Product image -->
+            <img src="images/image6.png" alt="Frankenstein book cover" width="500">
 
-        <!-- Product image -->
-        <img src="images/image6.png" alt="Frankenstein book cover" width="500">
+            <!-- Price -->
+            <p class="product-price">99 kr</p>
 
-        <!-- Price -->
-        <p class="product-price">99 kr</p>
+            <!-- Description -->
+            <p>
+                Frankenstein is a classic novel that explores ambition, responsibility, and the consequences of scientific
+                discovery. A timeless story that blends gothic horror with deep philosophical questions.
+            </p>
 
-        <!-- Description -->
-        <p>
-            Frankenstein is a classic novel that explores ambition, responsibility, and the consequences of scientific
-            discovery. A timeless story that blends gothic horror with deep philosophical questions.
-        </p>
+            <!-- Buy link -->
+            <a href="checkout.html">
+                <button>Buy Now</button>
+            </a>
+        </div>
+    </main>
 
-        <!-- Buy link -->
-        <a href="checkout.html">
-            <button>Buy Now</button>
-        </a>
-    </div>
     <footer>
         <p>&copy; 2026 Monster Reads. All rights reserved.</p>
         <p>Bringing classic literature to life, one monster at a time.</p>
